syntax ="proto3";
package msg.methodcall.v1;
option go_package="github.com/iansmith/parigot/g/msg/methodcall/v1;methodcallmsg";

// definitions for the data structures (messages) for the bar service

// AccumulateRequest repeatedly calls AddMultiply on foo and returns accumulated results
message AccumulateRequest {
    repeated int32 value = 1;
}

message AccumulateResponse {
    int32 sum = 1;
    int32 product = 2;
}